# schoolboard

./: .eslintrc.js  README.md  package-lock.json  package.json  tailwind.config.cjs
assets/: icon.icns
src/: App.tsx  Router.tsx  index.html  index.tsx  main.dev.ts  main.tsx  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: argo.rs  data.rs  main.rs
src/assets/img/: AbsentsSvg.tsx  AlarmSvg.tsx  CalendarSvg.tsx  ClockSvg.tsx  CloseSvg.tsx  CopySvg.tsx  ExamSvg.tsx  ExitSvg.tsx  HomeSvg.tsx  MaximizeSvg.tsx  MinimizeSvg.tsx  OffSvg.tsx  PushPinSvg.tsx  RefreshSvg.tsx
src/components/: Button.tsx  Layout.tsx  Section.tsx
src/components/Background/: Background.tsx  BackgroundItems.tsx
src/components/Header/: Header.tsx
src/components/Home/: HomeHw.tsx  HomeHws.tsx  HomeMark.tsx  HomeMarks.tsx  HomeMemo.tsx  HomeMemos.tsx  HomeTopic.tsx  HomeTopics.tsx
src/components/Homeworks/: HomeworksDate.tsx  HomeworksFilter.tsx  HomeworksItem.tsx
src/components/Marks/: MarksGraph.tsx  MarksSubject.tsx  MarksSubjectDetails.tsx
src/components/Memos/: MemosDate.tsx  MemosFilter.tsx  MemosItem.tsx
src/components/Menu/: Menu.tsx
src/components/Navbar/: index.tsx
src/components/Sidebar/: Notifications.tsx  Sidebar.tsx  SidebarAbsents.tsx  SidebarCalendar.tsx  SidebarMemos.tsx  SidebarTop.tsx  index.tsx
src/context/: DarkMode.tsx
src/models/: Actions.ts  Argo.ts  Store.ts  Student.ts  System.ts
src/pages/: Home.tsx  Homeworks.tsx  Login.tsx  Marks.tsx  Memos.tsx
src/redux/: store.ts
src/style/: _home.scss
src/util/: dates.ts  string.ts
(+25 files in other folders)
