[package]
name = "schoolboard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
tauri = { version = "1.2", features = ["api-all"] }
anyhow = "1.0.68"
hex = "0.4.3"
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
base64 = "0.21.0"
sha2 = "0.10.6"
tokio = { version = "1.24.2", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
